# mosquitto

./: .config.mk.swp  .gitignore  CMakeLists.txt  ChangeLog.txt  Makefile  README-windows.txt  buildtest.py  config.h  config.mk  mosquitto.conf  set-version.sh
apps/db_dump/: db_dump.c  db_dump.h  print.c  stubs.c
apps/mosquitto_ctrl/: CMakeLists.txt  Makefile  broker.c  client.c  dynsec.c  dynsec_client.c  dynsec_group.c  dynsec_role.c  example.c  mosquitto_ctrl.c  mosquitto_ctrl.h  options.c
apps/mosquitto_passwd/: CMakeLists.txt  Makefile  get_password.c  get_password.h  mosquitto_passwd.c
client/: CMakeLists.txt  Makefile  args.txt  client_props.c  client_shared.c  client_shared.h  file1  file1.c  file2  file2.c  pub_client.c  pub_shared.c  pub_shared.h  rr_client.c  sub_client.c  sub_client_output.c  sub_client_output.h  temp.c
client/logs/: cfg_parse_property_bounds_check.txt  cfg_parse_property_pointer_overflow_check.txt  cfg_parse_property_pointercheck.txt  cfg_parse_property_signed_overflow.txt  cfg_parse_property_user_defined.txt
debian/: changelog  control  copyright  mosquitto.dirs  mosquitto.init  mosquitto.postinst
debian/patches/: dont-build-docs.patch  series
docker/1.5/: Dockerfile
docker/generic/: Dockerfile
docker/local/: Dockerfile
include/: mosquitto.h  mosquitto_broker.h  mosquitto_plugin.h  mqtt_protocol.h
installer/: mosquitto.nsi  mosquitto64.nsi
lib/: CMakeLists.txt  Makefile  actions.c  alias_mosq.c  alias_mosq.h  base64_mosq.c  base64_mosq.h  callbacks.c  callbacks.h  connect.c  handle_auth.c  handle_connack.c  handle_disconnect.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrec.c  handle_pubrel.c  handle_suback.c  handle_unsuback.c  helpers.c  http_client.c  http_client.h  linker.version  logging_mosq.c  logging_mosq.h  loop.c  memory_mosq.c  memory_mosq.h  messages_mosq.c  messages_mosq.h  misc_mosq.c  misc_mosq.h  mosquitto.c  mosquitto.h  mosquitto_internal.h  net_mosq.c  net_mosq.h  net_mosq_ocsp.c  net_ws.c  (+32 more)
lib/cpp/: CMakeLists.txt  mosquittopp.h
man/: CMakeLists.txt  Makefile  mosquitto.8.xml  mosquitto.conf.5.xml  mosquitto_pub.1.xml  mosquitto_rr.1.xml  mosquitto_sub.1.xml
misc/letsencrypt/: mosquitto-copy.sh
plugins/: CMakeLists.txt  Makefile  README.md
plugins/add-user-properties/: Makefile  add_properties.c
plugins/connection-state/: CMakeLists.txt  Makefile  mosquitto_connection_state.c
plugins/dynamic-security/: CMakeLists.txt  Makefile  acl.c  auth.c  clientlist.c  clients.c  config_init.c  dynamic_security.h  grouplist.c  groups.c  hash.c  json_help.c  json_help.h  plugin.c  rolelist.c  roles.c  test.conf  test.sh
plugins/examples/: CMakeLists.txt  Makefile
plugins/examples/add-properties/: CMakeLists.txt  Makefile  mosquitto_add_properties.c  test.conf
plugins/examples/auth-by-ip/: CMakeLists.txt  Makefile  mosquitto_auth_by_ip.c  test.conf
plugins/examples/client-properties/: CMakeLists.txt  Makefile  mosquitto_client_properties.c  test.conf
plugins/examples/connection-state/: CMakeLists.txt  Makefile  mosquitto_connection_state.c  test.conf
plugins/examples/delayed-auth/: CMakeLists.txt  Makefile  mosquitto_delayed_auth.c  test.conf  test.sh
plugins/examples/force-retain/: CMakeLists.txt  Makefile  mosquitto_force_retain.c  test.conf  test.sh
plugins/examples/message-timestamp/: CMakeLists.txt  Makefile  mosquitto_message_timestamp.c  test.conf
plugins/examples/payload-modification/: CMakeLists.txt  Makefile  mosquitto_payload_modification.c  test.conf
plugins/examples/print-ip-on-publish/: CMakeLists.txt  Makefile  mosquitto_print_ip_on_publish.c  test.conf  test.sh
plugins/examples/topic-modification/: CMakeLists.txt  Makefile  mosquitto_topic_modification.c  test.conf
plugins/printf-example/: Makefile  printf_example.c
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile  bridge.c  bridge_dynamic.c  bridge_topic.c  broker_control.c  conf.c  conf_includedir.c  context.c  control.c  database.c  handle_auth.c  handle_connack.c  handle_connect.c  handle_disconnect.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  http_serv.c  json_help.c  json_help.h  keepalive.c  lib_load.h  linker-macosx.syms  linker.syms  listeners.c  logging.c  loop.c  memory_public.c  mosquitto.c  mosquitto_broker_internal.h  mux.c  mux.h  mux_epoll.c  mux_kqueue.c  mux_poll.c  net.c  password_mosq.c  password_mosq.h  persist.h  (+42 more)
test/: mosq_test.py
test/broker/: 01-connect-accept-protocol.py  01-connect-bad-packet.py  01-connect-disconnect-v5.py  01-connect-duplicate.py  01-connect-global-max-clients.py  01-connect-global-max-connections.py  01-connect-invalid-id-0.py  01-connect-invalid-id-missing.py  01-connect-invalid-id-utf8.py  01-connect-invalid-protonum.py  01-connect-invalid-reserved.py  01-connect-success.py  01-connect-uname-invalid-utf8.py  01-connect-uname-no-flag.py  01-connect-uname-no-password-denied.py  01-connect-uname-password-denied-no-will.py  01-connect-uname-password-denied.py  01-connect-uname-password-success-no-tls.py  01-connect-uname-pwd-no-flag.py  02-shared-nolocal.py  02-shared-qos0-v5.py  02-subhier-crash.py  02-subpub-b2c-topic-alias.py  02-subpub-qos0-long-topic.py  02-subpub-qos0-oversize-payload.py  02-subpub-qos0-retain-as-publish.py  02-subpub-qos0-send-retain.py  02-subpub-qos0-subscription-id.py  02-subpub-qos0-topic-alias-unknown.py  02-subpub-qos0-topic-alias.py  02-subpub-qos0.py  02-subpub-qos1-bad-pubcomp.py  02-subpub-qos1-bad-pubrec.py  02-subpub-qos1-message-expiry-retain.py  02-subpub-qos1-message-expiry-will.py  02-subpub-qos1-message-expiry.py  02-subpub-qos1-nolocal.py  02-subpub-qos1-oversize-payload.py  02-subpub-qos1.py  02-subpub-qos2-1322.py  (+162 more)
test/client/: test.sh
test/lib/: 01-pre-connect-callback.py  Makefile
test/unit/: Makefile  datatype_read.c  datatype_write.c  keepalive_stubs.c  keepalive_test.c  persist_read_stubs.c  persist_read_test.c  persist_write_stubs.c  persist_write_test.c  property_read.c  property_user_read.c  property_write.c  stubs.c  subs_stubs.c  utf8.c  util_topic_test.c
(+97 files in other folders)
