if(NOT WIN32)
	add_subdirectory(add-properties)
	add_subdirectory(message-timestamp)
endif()
add_subdirectory(auth-by-ip)
add_subdirectory(client-properties)
add_subdirectory(connection-state)
add_subdirectory(delayed-auth)
add_subdirectory(force-retain)
add_subdirectory(payload-modification)
add_subdirectory(print-ip-on-publish)
add_subdirectory(topic-modification)
